--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -131,12 +131,14 @@ img {
 
 /* home section */
 #home {
-  background: url('../images/home-bg.jpg') no-repeat;
+  background: url('../images/logo.png') no-repeat;
   background-size: cover;
   background-position: center;
   min-height: 500px;
   padding-top: 180px;
   padding-bottom: 100px;
+  height: fill;
+  width: fill;
 }
 #home h1,
 #home h3 {
